[tool.poetry]
name = "toker-backend"
version = "0.1.0"
description = "Backend for Toker dating app"
authors = ["Your Team <your.email@edu.ece.fr>"]
readme = "README-backend.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
djangorestframework = "^3.14"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toker-cli = "cli:main"